<resources>
    <string name="app_name">알리GO</string>
    <string name="str_permission_guide_1">알리GO 서비스를 경험하기 위해 다음의 필수 권한 및 설정 허용에 동의해 주세요.</string>
    <string name="str_permission_guide_2">기본 발신 발신 번호표시 앱</string>
    <string name="str_permission_guide_3">식별 기능을 최대한 화룡하려면 Google 정책을 준수하도록 권한을 부여하는것에 동의하세요.</string>
    <string name="str_permission_guide_4">필수 권한</string>
    <string name="str_permission_guide_5">기능을 사용하기 전에 다음 필수 권한을 허용해야 합니다. 전화, 통화기록, SMS, 전화 연락처</string>
    <string name="str_permission_guide_6">다른 앱 위에 표시</string>
    <string name="str_permission_guide_7">발신자 식별을 위한 권한입니다.</string>
    <string name="str_permission_guide_8">알겠습니다.</string>
    <string name="str_permission_guide_9">전화 수신을 감지하기 위한 권한입니다.</string>
    <string name="str_permission_guide_10">발신 번호 감지를 위한 권한입니다.</string>
    <string name="str_permission_guide_11">전송내역의 관리와 발신자 식별을 위한 권한입니다.</string>
    <string name="str_permission_guide_12">SMS 메시지 전송을 위한 권한입니다.</string>
    <string name="str_permission_guide_13">저장공간, 알림</string>
    <string name="str_permission_guide_14">접근권한 변경 방법</string>
    <string name="str_permission_guide_15">휴대폰 설정 > 앱 > 알리GO</string>
    <string name="str_permission_guide_16">저장공간, 알림</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_home">홈</string>
    <string name="str_contract">연락처</string>
    <string name="str_select_contract">연락처 선택</string>
    <string name="str_group">그룹</string>
    <string name="str_select_photo">이미지 선택</string>
    <string name="str_app_finish_guide_toast">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="str_phone">전화</string>
    <string name="str_phone_record">통화기록</string>
    <string name="en_sms">SMS</string>
    <string name="str_select_permission">선택 접근 권한</string>
    <string name="str_search_contact_hint">내 연락처 검색</string>
    <string name="str_contents">내용</string>
    <string name="str_callback_sms_setting">콜백문자 설정</string>
    <string name="str_complete">완료</string>
    <string name="str_contact_detail">연락처 상세</string>
    <string name="str_attach_photo">사진 첨부</string>
    <string name="str_add_image">이미지 추가</string>
    <string name="str_inquiry_file_size_error">파일 첨부는 %dMB 까지만 가능합니다.</string>
    <string name="str_on">ON</string>
    <string name="str_on_guide">알리GO 앱 서비스가 실행중</string>
    <string name="str_off_guide">알리GO 앱 서비스가 중지</string>
    <string name="str_off">OFF</string>
    <string name="str_send_type">문자 전송 방법</string>
    <string name="str_send_sms">문자로 보내기</string>
    <string name="str_send">전송</string>
    <string name="str_send_kakao">카카오톡으로 보내기</string>
    <string name="str_usage_guide">이용 안내</string>
    <string name="str_confirm">확인</string>
    <string name="str_stop_see">그만 보기</string>
    <string name="str_usage_guide_1">앱(APP) 사용으로 인한 피해 및 분쟁등 모든 책임은 사용자에게 있습니다. 아래 앱의 기능 및 특징을 확인하시고 앱 사용시 주의하여 주시기 바랍니다.\n\n1. 통화 후 자동으로 발신자에게 미리 지정한 형식의 문자를 전송할 수 있습니다.\n2. 문자 전송시 스마트폰의 문자를 이용하므로 사용중인 요금제에 따라서 요금이 청구될 수 있습니다.\n3. 광고성 문자 전송시 스팸 방지를 위한 정보통신망법에 따라 재제를 받을 수 있습니다. (정보통신망법에서 지정한 양식을 준수하시기 바랍니다.)</string>
    <string name="str_before_check_sms">문자 전송 전 확인</string>
    <string name="str_before_check_sms_guide">문자 전송 전 내용을 확인할 수 있습니다.</string>
    <string name="str_plus">추가</string>
    <string name="str_incall">수신</string>
    <string name="str_outcall">발신</string>
    <string name="str_releasecall">부재중</string>
    <string name="str_all_select">전체선택</string>
    <string name="str_all">전체</string>
    <string name="str_hint_group_name">그룹 이름을 입력해주세요.</string>
    <string name="str_cancel">취소</string>
    <string name="str_callback_sms">콜백문자</string>
    <string name="str_callback_msg_setting">콜백 메시지 설정</string>
    <string name="str_callback_msg_contact_setting">콜백 메시지 연락처 설정</string>
    <string name="str_callback_msg_type">콜백문자 유형</string>
    <string name="str_incall_mesesage">수신 문자</string>
    <string name="str_outcall_message">발신 문자</string>
    <string name="str_releasecall_message">부재중 문자</string>
    <string name="str_service_setting">서비스 설정</string>
    <string name="str_duplicated_send_setting">중복 발신 설정</string>
    <string name="str_schedule_setting">스케줄 설정</string>
    <string name="str_one_to_day">1회/1일</string>
    <string name="str_one_to_week">1회/1주</string>
    <string name="str_one_to_month">1회/1달</string>
    <string name="str_no_limit">제한없음</string>
    <string name="str_before_checking_set">문자 확인</string>
    <string name="str_day_1">월</string>
    <string name="str_day_2">화</string>
    <string name="str_day_3">수</string>
    <string name="str_day_4">목</string>
    <string name="str_day_5">금</string>
    <string name="str_day_6">토</string>
    <string name="str_day_7">일</string>
    <string name="str_contact_x">모르는 번호</string>
    <string name="str_contact_x_guide">설정 시 모르는 번호로 수신,송신,부재중 전화가 올 경우 알리GO 서비스를 이용합니다.</string>
    <string name="str_contact_o">연락처 번호</string>
    <string name="str_contact_o_guide">설정 시 연락처에 저장된 번호로 수신,송신,부재중 전화가 올 경우 알리GO 서비스를 이용합니다.</string>
    <string name="str_setting_guide_1">설정한 항목은 해당 단말기에서만 적용됩니다.</string>
    <string name="str_setting">설정</string>
    <string name="str_setting_guide_2">콜백문자 서비스를 적용할 연락처를 선택해주세요.</string>
    <string name="str_hint_message">메시지를 입력해주세요.</string>
    <string name="str_select_photo_tmg">사진을 선택해 주세요.</string>
    <string name="str_create_group">그룹 만들기</string>
    <string name="viewpager2_banner">%1$d / %2$d 모두보기</string>
    <string name="str_guide">안내</string>
    <string name="str_select_contact_first">연락처 번호 선택을 먼저 완료해주세요.</string>
    <string name="str_usage_guide3">사용 안내</string>
    <string name="str_usage_guide4">콜백 자동문자는 MMS/LMS 기반의 서비스로 발신 대상이 (010)으로 시작하는 휴대폰이어야 수신 가능합니다.</string>
    <string name="str_usage_guide5">문자 발송은 각 통신사의 요금 체계에 따른 과금이 발생할 수 있으며, 과사용 또는 기타 이유로 통신사의 제재를 받을 수 있습니다.</string>
    <string name="str_usage_guide6">서비스 사용으로 인한 제제 등의 문제에 책임지지 않으니, 통신사를 통해 관련 내용을 반드시 확인하여 주시기 바랍니다.</string>
    <string name="str_usage_guide7">SMS(단문 메시지) : 45자(90byte) 이하</string>
    <string name="str_usage_guide8">LMS(장문 메시지) : 1000자(2000byte) 이하</string>
    <string name="str_usage_guide9">MMS(멀티미디어 메시지) : 1000자(2000byte) + 이미지 1장</string>
    <string name="str_usage_guide10">광고성 내용이 포함된 문자는 정보통신망법 규정상 21:00~08:00까지 전송을 금지하고 있으니 이용에 참고 부탁드립니다.</string>
    <string name="str_pr">홍보</string>
    <string name="str_kakao_channel">카카오 채널</string>
    <string name="str_naver_smart_store">네이버 스마트 스토어</string>
    <string name="str_setting_title_1">콜백 문자 설정</string>
    <string name="str_setting_title_2">그룹 콜백 문자 설정</string>
    <string name="str_setting_title_3">콜백 문자 설정에 저장한 내용 대신 그룹별 콜백 문자 설정으로 문자가 전송됩니다</string>
    <string name="str_setting_title_4">콜백 문자 제외 설정</string>
    <string name="str_setting_title_5">문자 전송을 금지할 번호를 설정할 수 있습니다.</string>
    <string name="str_setting_title_6">발송 제외 목록</string>
    <string name="str_setting_title_7">콜백 문자 관리</string>
    <string name="str_setting_title_8">통신사별 문자요금 정책보기</string>
    <string name="str_setting_title_9">통신사별 문자요금 정책</string>
    <string name="str_group_setting">그룹 설정</string>
    <string name="str_group_manage">그룹 관리</string>
    <string name="str_message_set_title_1">통화 종료 후 동작 설정</string>
    <string name="str_message_set_title_2">문자 편집</string>
    <string name="str_message_set_title_3">동일번호 전송 주기</string>
    <string name="str_message_set_title_4">전송 허용 요일</string>
    <string name="str_message_set_title_5">문자 전송 전 확인</string>
    <string name="str_message_set_title_6">문자 전송 후 알림</string>인
    <string name="str_is_before_check_option_1">전송 전 확인</string>
    <string name="str_is_before_check_option_2">자동발송</string>
    <string name="str_callback_history">콜백 발송 이력</string>
    <string name="str_callback_history_record">발송 조회</string>
    <string name="str_exit_app">앱 종료</string>
    <string name="str_notification_update">업데이트 알림</string>
    <string name="str_update_guide">더 좋아진 앱의 최신 버전을 준비했습니다. 새로운 버전으로 업데이트 후 이용해주세요.</string>
    <string name="str_do_update">업데이트 하기</string>
    <string name="str_do_next">다음에</string>
    <string name="str_skt">SKT</string>
    <string name="str_kt">KT</string>
    <string name="str_lg">LG U+</string>
    <string name="str_skt_policy_1">과금 적용 정책</string>
    <string name="str_skt_policy_4">자세한 과금 정책은 각 통신사에 문의하시기 바랍니다.</string>
    <string name="str_skt_policy_2">1일 500건을 초과하는 문자 메시지를 발송한 경우</string>
    <string name="str_skt_policy_3">1일 200건을 초과하는 문자 메시지 발송 횟수가 월 중 10회를 넘는 경우</string>
    <string name="str_kt_policy_2">1일 500건을 초과하는 문자 메시지를 발송한 경우</string>
    <string name="str_kt_policy_3">1일 150건을 초과하는 문자 메시지 발송 횟수가 월 중 10회를 넘는 경우</string>
    <string name="str_lg_policy_2">1일 500건을 초과하는 문자 메시지를 발송한 경우</string>
    <string name="str_lg_policy_3">1일 150건을 초과하는 문자 메시지 발송 횟수가 월 중 10회를 넘는 경우</string>

</resources>