<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.permission.PermissionActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Label.L"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/str_permission_guide_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Label.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_permission_guide_4" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_r8_f_gray50"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_phone_black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Label.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_phone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Paragraph.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/str_permission_guide_9"
                        android:textColor="@color/gray_600" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_r8_f_gray50"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_book_black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Label.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_phone_record" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Paragraph.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/str_permission_guide_10"
                        android:textColor="@color/gray_600" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_r8_f_gray50"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_contract_black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Label.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_contract" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Paragraph.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/str_permission_guide_11"
                        android:textColor="@color/gray_600" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_r8_f_gray50"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_sms_black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Label.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/en_sms" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Paragraph.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/str_permission_guide_12"
                        android:textColor="@color/gray_600" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_r8_f_gray50"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_front_black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Label.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_permission_guide_6" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Paragraph.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/str_permission_guide_7"
                        android:textColor="@color/gray_600" />
                </LinearLayout>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Label.M"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_select_permission"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Paragraph.M"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_permission_guide_13"
                android:layout_marginHorizontal="20dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Label.M"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_permission_guide_14"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Paragraph.M"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_permission_guide_15"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_permission_ok"
                style="@style/FButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/str_permission_guide_8"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>