<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.setting.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/appbar_setting"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white">
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Label.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_setting"
                android:layout_weight="1"
                android:layout_marginStart="20dp" />
        </LinearLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/appbar_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Label.M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_300"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/str_setting_title_1"/>
                <LinearLayout
                    android:id="@+id/ll_callback_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp">
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Paragraph.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_setting_title_7"/>
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_right_black"/>

                </LinearLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="@color/gray_50"
                    android:layout_marginTop="20dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Label.M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_300"
                    android:text="@string/str_setting_title_2"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Paragraph.M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_title_3"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="20dp"/>
                <LinearLayout
                    android:id="@+id/ll_setting_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Paragraph.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_group_manage"/>
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_right_black"/>
                </LinearLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="@color/gray_50"
                    android:layout_marginTop="20dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Label.M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_300"
                    android:layout_marginTop="20dp"
                    android:text="@string/str_setting_title_4"
                    android:layout_marginHorizontal="20dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Paragraph.M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/str_setting_title_5"
                    android:layout_marginHorizontal="20dp"/>
                <LinearLayout
                    android:id="@+id/ll_setting_blacklist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Paragraph.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_setting_title_6"/>
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_right_black"/>
                </LinearLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="@color/gray_50"
                    android:layout_marginTop="20dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Label.M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_300"
                    android:layout_marginTop="20dp"
                    android:text="@string/str_callback_history_record"
                    android:layout_marginHorizontal="20dp"/>
                <LinearLayout
                    android:id="@+id/ll_setting_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Paragraph.M"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_callback_history"/>
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_right_black"/>
                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>