<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.advertise.AdvertiseActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/appbar_advertise"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/gray_50"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_appbar_advertise_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="8dp"
                android:src="@drawable/ic_back_black" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Label.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_pr"
                android:textColor="@color/gray_600" />
        </LinearLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/appbar_advertise"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/gray_50">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/bg_r8_f_kakao">
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Label.M"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_kakao_channel"
                        android:textColor="@color/kakao_brown"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/bg_r8_f_naver">
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Label.M"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_naver_smart_store"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>